--- a/ingredients.html
+++ b/ingredients.html
@@ -10,7 +10,7 @@
 <body>
     
     <input type="text" class="ingSearch">
-    <button class="submit" id="ingSubmit">Add</button>
+    <button class="submit" id="ingSubmit">Search</button>
     <h5 class="ingList" id="iList"></h5>
     <h5 id="selectedList" class="selectedIngredients"></h5>
     <script src="./ingredients.js"></script>
