--- a/ingredients.html
+++ b/ingredients.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a class="home" href="./index.html">Home</a>
     <input type="text" class="ingSearch">
     <button class="submit" id="ingSubmit">Search</button>
     <h5 class="ingList" id="iList"></h5>
