--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <script src="https://kit.fontawesome.com/76a22a6cf5.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <button class="signIn" id="signInBtn">Sign In</button>
     <div class="container">
+      <div class="signIn">
+        
+      </div>
         <div class="row text-center">
           <h3>
             Dont know what you want to eat?
